Fix encoding issues on windows using `Files.writeString()`