@@ -28,11 +28,10 @@ public class ModpackUpdater {
     public long totalBytesToDownload = 0;
     public boolean fullDownload = false;
     private Jsons.ModpackContentFields serverModpackContent;
-    private String unModifiedSMC;
+    private String modpackContentJson;
     private WorkaroundUtil workaroundUtil;
     public Map<Jsons.ModpackContentFields.ModpackContentItem, List<String>> failedDownloads = new HashMap<>();
     private final Set<String> newDownloadedFiles = new HashSet<>(); // Only files which did not exist before. Because some files may have the same name/path and be updated.
-
     private InetSocketAddress modpackAddress;
     private Secrets.Secret modpackSecret;
     private Path modpackDir;
@@ -64,7 +63,7 @@ public class ModpackUpdater {
             }
 
             // Prepare for modpack update
-            unModifiedSMC = GSON.toJson(serverModpackContent);
+            modpackContentJson = GSON.toJson(serverModpackContent);
 
             // Create directories if they don't exist
             if (!Files.exists(modpackDir)) {
@@ -79,7 +78,7 @@ public class ModpackUpdater {
                 // Check if an update is needed
                 if (!ModpackUtils.isUpdate(serverModpackContent, modpackDir)) {
                     LOGGER.info("Modpack is up to date");
-                    Files.write(modpackContentFile, unModifiedSMC.getBytes());
+                    Files.writeString(modpackContentFile, modpackContentJson);
                     CheckAndLoadModpack();
                     return;
                 }
@@ -315,7 +314,7 @@ public class ModpackUpdater {
                     // or fail and then show the error
 
                     var refreshedContent = refreshedContentOptional.get();
-                    this.unModifiedSMC = GSON.toJson(refreshedContent);
+                    this.modpackContentJson = GSON.toJson(refreshedContent);
 
                     // filter list to only the failed downloads
                     var refreshedFilteredList = refreshedContent.list.stream().filter(item -> hashesToRefresh.containsKey(item.file)).toList();
@@ -355,10 +354,10 @@ public class ModpackUpdater {
                 }
             }
 
-            LOGGER.info("Done, saving {}", modpackContentFile.getFileName().toString());
+            LOGGER.info("Done, saving {}, Json: {}", modpackContentFile.toAbsolutePath().normalize(), modpackContentJson);
 
             // Downloads completed
-            Files.write(modpackContentFile, unModifiedSMC.getBytes());
+            Files.writeString(modpackContentFile, modpackContentJson);
 
             Path cwd = Path.of(System.getProperty("user.dir"));
             CustomFileUtils.deleteDummyFiles(cwd, serverModpackContent.list);
